# Miscz

./: CMakeLists.txt  Info.plist  Makefile  Makefile.master  Misc.files  README.md  TODO.md  gpl-header-c.txt  像素硬边缘放大.cs
Card3D/: Card3D.cpp  Info.plist  Makefile
CornerPin/: CornerPin.cpp  Info.plist  Makefile
Miscz/: CImg.vcxproj  Info.plist  Makefile  Miscz.sln  Miscz.vcxproj  Support.vcxproj  randomGenerator.H  randomGenerator.cpp
Miscz.ofx.bundle/Contents/Resources/: Miscz.xml  Miscz.zh-CN.xml
Miscz.ofx.bundle/Contents/Win64/: Miscz.ofx
Position/: Info.plist  Makefile  Position.cpp
Scripts/: LayerRepeater.cs  PixelScalingTool.cs  PixelScalingTool_old.cs  PsdLayerSplitter.cs  SpriteSheetTool.cs
Scripts/LayerRepeater/: Common.cs  IniFile.cs  L.cs  LayerRepeater.cs  LayerRepeater.csproj  LayerRepeater.sln  LayerRepeaterArgs.cs  LayerRepeaterCommon.cs
Scripts/LayerRepeater/Properties/: AssemblyInfo.cs
SpriteSheet/: Info.plist  Makefile  SpriteSheet.cpp
SupportExt/: README.md  fast_mutex.h  gpl-header-c.txt  ofxsCoords.h  ofxsCopier.h  ofxsFileOpen.cpp  ofxsFileOpen.h  ofxsFilter.h  ofxsFormatResolution.h  ofxsGenerator.cpp  ofxsGenerator.h  ofxsImageBlenderMasked.h  ofxsLut.cpp  ofxsLut.h  ofxsMacros.h  ofxsMaskMix.h  ofxsMatrix2D.h  ofxsMerging.h  ofxsMipmap.cpp  ofxsMipmap.h  ofxsMultiPlane.cpp  ofxsMultiPlane.h  ofxsOGLDebug.h  ofxsOGLFontData.cpp  ofxsOGLFontUtils.h  ofxsOGLFunctions-README.md  ofxsOGLFunctions.h  ofxsOGLFunctions_gl.cpp  ofxsOGLFunctions_mesa.cpp  ofxsOGLHiDPI.h  ofxsOGLTextRenderer.cpp  ofxsOGLTextRenderer.h  ofxsOGLUtilities.cpp  ofxsOGLUtilities.h  ofxsPixelProcessor.h  ofxsPositionInteract.h  ofxsRamp.cpp  ofxsRamp.h  ofxsRectangleInteract.cpp  ofxsRectangleInteract.h  (+15 more)
SupportExt/glad/: glad.cpp  glad.h  gladegl.cpp  gladegl.h
Transform/: Info.plist  Makefile  Transform.cpp  Transform.cpp.bak
